# runner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflow/: rust.yml
.github/workflows/: aur.yml  releases.yml  rust.yml
docs/: configuration.md
src/: app.rs  cli.rs  config.rs  core.rs  file_manager.rs  formatter.rs  keymap.rs  lib.rs  main.rs  terminal.rs  ui.rs  utils.rs  worker.rs
src/app/: actions.rs  handlers.rs  keymap.rs  nav.rs  parent.rs  preview.rs  state.rs
src/config/: display.rs  input.rs  load.rs  theme.rs
src/config/theme/: gruvbox.rs
src/core/: file_manager.rs  find.rs  fm.rs  formatter.rs  proc.rs  search.rs  terminal.rs  worker.rs
src/ui/: icons.rs  overlays.rs  panes.rs  render.rs  widgets.rs
src/ui/widgets/: dialog.rs  draw.rs
src/utils/: cli.rs  formatter.rs  helpers.rs
tests/: find_tests.rs  formatting_tests.rs  nav_tests.rs  proc_tests.rs  ui_tests.rs  utils_tests.rs  worker_tests.rs
