[package]
name = "runner-tui"
description = "A terminal based file browser"
version = "0.2.12"
edition = "2024"
license = "MIT"
repository = "https://github.com/alexm-dev/runner"
documentation = "https://docs.rs/runner-tui"
readme = "README.md"
authors = ["alexm-dev"]
rust-version = "1.92"
categories = ["filesystem", "command-line-utilities", "command-line-interface"]
keywords = ["file-browser", "file-manager", "tui", "cli", "search"]

[[bin]]
name = "rn"
path = "src/main.rs"

[dependencies]
dirs = "6.0.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.10"
crossbeam-channel = "0.5"
unicode-width = "0.2.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
strip = "debuginfo"
debug = false

[profile.release-windows]
inherits = "release"
panic    = "unwind"

[badges]
maintenance = { status = "deprecated" }
