[package]
name = "runa-tui"
description = "A fast, keyboard-focused terminal file browser (TUI). Highly configurable and lightweight. Previously known as runner-tui."
version = "0.3.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/alexm-dev/runa"
documentation = "https://docs.rs/runa-tui"
readme = "README.md"
authors = ["alexm-dev"]
rust-version = "1.92"
categories = ["filesystem", "command-line-utilities", "command-line-interface"]
keywords = ["file-browser", "file-manager", "tui", "cli", "search"]

[[bin]]
name = "rn"
path = "src/main.rs"

[dependencies]
dirs = "6.0.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.10"
crossbeam-channel = "0.5"
unicode-width = "0.2.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
strip = "debuginfo"
debug = false

[profile.release-windows]
inherits = "release"
panic    = "unwind"
